kubernetes-manifests/base/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmarky-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookmarky-api
  template:
    metadata:
      labels:
        app: bookmarky-api
    spec:
      imagePullSecrets:
        - name: harbor-registry
      containers:
        - name: bookmarky-api
          image: harbor.squid-ink.us/politeauthority/bookmarky:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
