kubernetes-manifests/base/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookmarky-api
  annotations:
    # cert-manager.io/cluster-issuer: example-issuer
    nginx.ingress.kubernetes.io/upstream-vhost: $host
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: $http_origin";
      more_set_headers "Access-Control-Request-Headers: DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,Client-Id,X-Api-Key";
      more_set_headers "Access-Control-Request-Method: *";
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: User-Agent,If-Modified-Since,Content-Type,Authorization,Client-Id,X-Api-Key,Token
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS, DELETE, PATCH
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: example-ingress-class
  rules:
    - host: api.bookmarky.example.com
      http:
        paths:
          - backend:
              service:
                name: bookmarky-api
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - api.bookmarky.example.com
      secretName: api-bookmarky
